Fixed Lint4j warning.